Make temp ImgList page

--- a/BatB/app/src/main/res/layout/activity_main.xml
+++ b/BatB/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,11 @@
         android:fontFamily="@font/tubiti"
         />
 
-
+    <Button
+        android:id="@+id/listtmp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="list" />
 
 
 </RelativeLayout>
