--- a/BatB/app/src/main/res/layout/activity_result.xml
+++ b/BatB/app/src/main/res/layout/activity_result.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/resultImage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:srcCompat="@mipmap/ic_launcher_round"
@@ -26,13 +26,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="저장"
-            android:layout_marginRight="20dp"/>
+            android:layout_marginRight="20dp"
+            android:background="#efd3d3"
+            android:padding="3dp"/>
 
         <Button
             android:id="@+id/finishbutton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="저장하지 않고 끝내기" />
+            android:text="저장하지 않고 끝내기"
+            android:background="#efd3d3"
+            android:padding="3dp"/>
 
     </LinearLayout>
 
