--- a/BatB/app/src/main/res/layout/activity_main.xml
+++ b/BatB/app/src/main/res/layout/activity_main.xml
@@ -68,5 +68,15 @@
         android:fontFamily="@font/tubiti"
         />
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="18dp"
+        android:text="Button" />
+
 
 </RelativeLayout>
