--- a/BatB/app/src/main/res/layout/activity_photo_check.xml
+++ b/BatB/app/src/main/res/layout/activity_photo_check.xml
@@ -10,21 +10,21 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:srcCompat="@mipmap/ic_launcher_round"
-        android:layout_weight="10"/>
+        android:layout_weight="10" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:text="이 사진을 사용하시겠습니까?"
-        android:textAlignment="center"
-        android:layout_weight="0.5"/>
+        android:gravity="center"
+        android:layout_weight="1" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:gravity="center"
         android:orientation="horizontal"
         android:layout_weight="1">
