--- a/BatB/app/src/main/res/layout/activity_photo_check.xml
+++ b/BatB/app/src/main/res/layout/activity_photo_check.xml
@@ -38,7 +38,7 @@
             android:layout_marginRight="20dp"/>
 
         <Button
-            android:id="@+id/Nobutton"
+            android:id="@+id/nobutton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="No"
