--- a/BatB/app/src/main/res/layout/item.xml
+++ b/BatB/app/src/main/res/layout/item.xml
@@ -16,27 +16,18 @@
         app:cardUseCompatPadding="true">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="316dp"
+            android:layout_height="492dp"
             android:layout_gravity="center"
             android:gravity="center"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/img_item"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:src="@drawable/ic_delivery"/>
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:src="@drawable/ic_delivery" />
 
-            <TextView
-                android:id="@+id/txt_item"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="26dp"
-                android:textColor="#005fb0"
-                android:textSize="36sp"
-                android:typeface="sans"
-                tools:text="Delivery"/>
 
         </LinearLayout>
 
