--- a/BatB/app/src/main/res/layout/list_img.xml
+++ b/BatB/app/src/main/res/layout/list_img.xml
@@ -13,12 +13,12 @@
     android:gravity="center">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="56dp"
-        android:layout_marginTop="10dp"
-        android:adjustViewBounds="true"
-        android:padding="8dp"
-        android:src="@drawable/ic_logo"/>
+    android:layout_width="wrap_content"
+    android:layout_height="56dp"
+    android:layout_marginTop="10dp"
+    android:adjustViewBounds="true"
+    android:padding="8dp"
+    android:src="@drawable/bnb"/>
 
     <com.gigamole.navigationtabstrip.NavigationTabStrip
         android:id="@+id/nts"
@@ -37,21 +37,36 @@
         app:nts_type="line"
         app:nts_weight="3dp"/>
 
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/bg_main">
 
+
         <com.example.batb.utils.NonScrollableViewPager
             android:id="@+id/vp_main"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:paddingTop="10dp"/>
+        <TextView
+            android:id="@+id/text_similarity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-black"
+            android:gravity="center"
+            android:paddingTop="40dp"
+            android:paddingBottom="10dp"
+            android:text="dfslksdjflj"
+            android:textSize="33dp" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:background="@drawable/overlay_top"
             android:cacheColorHint="#00000000"/>
+
+
 
     </FrameLayout>
 
