Upload image files via okhttp

--- a/BatB/app/src/main/res/layout/activity_request.xml
+++ b/BatB/app/src/main/res/layout/activity_request.xml
@@ -6,4 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".RequestActivity">
 
+    <TextView
+        android:id="@+id/responseText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="172dp"
+        android:layout_marginTop="354dp"
+        android:layout_marginEnd="152dp"
+        android:layout_marginBottom="358dp"
+        android:text=""
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
