--- a/BatB/app/src/main/res/layout/item.xml
+++ b/BatB/app/src/main/res/layout/item.xml
@@ -17,15 +17,17 @@
 
         <LinearLayout
             android:layout_width="316dp"
-            android:layout_height="492dp"
+            android:layout_height="430dp"
             android:layout_gravity="center"
             android:gravity="center"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/img_item"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="300dp"
+                android:layout_height="420dp"
+                android:clickable="true"
+                android:onClick="clickMethod"
                 tools:src="@drawable/ic_delivery" />
 
 
