--- a/BatB/app/src/main/res/layout/activity_result.xml
+++ b/BatB/app/src/main/res/layout/activity_result.xml
@@ -5,38 +5,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PhotoCheckActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingBottom="20dp">
 
     <ImageView
         android:id="@+id/resultImage"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:srcCompat="@mipmap/ic_launcher_round"
         android:layout_weight="10"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:gravity="center"
         android:orientation="horizontal"
         android:layout_weight="1">
 
         <Button
-            android:id="@+id/saveButton"
+            android:id="@+id/changeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Before/After"
+            android:layout_marginRight="20dp"
+            android:background="#efd3d3"
+            android:padding="5dp"/>
+
+        <Button
+            android:id="@+id/savebutton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="저장"
-            android:layout_marginRight="20dp"
             android:background="#efd3d3"
-            android:padding="3dp"/>
-
-        <Button
-            android:id="@+id/finishbutton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="저장하지 않고 끝내기"
-            android:background="#efd3d3"
-            android:padding="3dp"/>
+            android:padding="5dp"/>
 
     </LinearLayout>
 
